<resources>
    <!--<string name="app_name">Tomcat</string>-->
    <string name="title_info">资讯</string>
    <string name="title_community">社区</string>
    <string name="title_start">游戏</string>

    <string name="info_tab_hot">热点</string>
    <string name="info_tab_video">视频</string>
    <string name="info_tab_news">新闻</string>

    <string name="comm_tab_community">社区</string>
    <string name="comm_tab_aq">问答</string>
    <string name="comm_tab_friend">好友</string>

    <string name="select_tab_new">最新</string>
    <string name="select_tab_good">精华</string>
    <string name="select_tab_hot">最热</string>

    <string name="select_tab_post">发帖</string>
    <string name="select_tab_level">等级</string>
    <string name="select_tab_nice">点赞</string>

    <string name="select_tab_find_me">\@我的</string>
    <string name="select_tab_input_me">评论我的</string>
    <string name="select_tab_nice_me">赞我的</string>

    <string name="menu_item_friend">我的好友</string>
    <string name="menu_item_post">我的发帖</string>
    <string name="menu_item_message">我的消息</string>
    <string name="menu_item_shop">金币商城</string>
    <string name="menu_item_record">兑换记录</string>
    <string name="menu_item_code">邀请码</string>
    <string name="menu_item_ad">更多金币</string>
    <string name="menu_item_userSettings">个人账号</string>
    <string name="menu_item_appSettings">设置</string>

    <string name="post_send">发帖</string>
    <string name="post_reply">回帖</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_title">最爱我的汉克狗</string>
    <string name="login_userName">账号</string>
    <string name="login_password">密码</string>
    <string name="login_getPassword">忘记密码?</string>
    <string name="login_login">登陆</string>
    <string name="login_flyLogin">游客登陆</string>
    <string name="login_register">立即注册</string>

    <string name="register_text">注册</string>
    <string name="register_input_userName">请输入账号</string>
    <string name="register_input_password">请输入密码</string>
    <string name="register_reInput_password">再次输入密码</string>
    <string name="register_ok">注册</string>
    <string name="register_back">返回</string>

    <string name="action_settings">Settings</string>
    <string name="app_settings_font">字体大小</string>
    <string name="app_settings_push">要文推送</string>
    <string name="app_settings_message">跟帖消息</string>
    <string name="app_settings_wifi">非wifi可用</string>
    <string name="app_settings_update">检查更新</string>
    <string name="user_settings_icon">头像</string>
    <string name="user_settings_name">昵称</string>
    <string name="app_settings_sex">性别</string>
    <string name="user_settings_birthday">生日</string>
    <string name="user_settings_level">我的等级</string>

    <string name="settings_font_big">大</string>
    <string name="settings_font_center">中</string>
    <string name="settings_font_small">小</string>
    <string name="settings_icon">设置你的头像</string>
    <string name="settings_name">修改昵称</string>
    <string name="settings_sex">选择您的性别</string>
    <string name="settings_sex_girl">女</string>
    <string name="settings_sex_boy">男</string>

    <string name="negative_str">取消</string>
    <string name="positive_str">确定</string>

    <string name="tv_text_title">标题:</string>
    <string name="et_hint_input_way">说点什么吧...</string>
    <string name="start_game">启动游戏</string>
    <string name="post_reply_str">回复:</string>
    <string name="post_reply_str2">原帖:</string>
    <string name="item_level_str">等级</string>
    <string name="settings_icon_camera">照相</string>
    <string name="settings_icon_picture">图片库</string>
    <string name="str_like">关注</string>
    <string name="str_send">发帖</string>
    <string name="str_reply">回帖</string>

    <string name="str_exit">再按一次退出程序</string>

    <string-array name="spinner_type">
        <item>社区</item>
        <item>问答</item>
    </string-array>

    <string-array name="spinner_gold">
        <item>悬赏10金币</item>
        <item>悬赏30金币</item>
        <item>悬赏50金币</item>
        <item>悬赏100金币</item>
    </string-array>

    <string name="str_put_address">运费到付</string>
    <string name="str_price">兑换价：%1$d金币</string>
    <string name="str_count">共计%1$d个</string>
    <string name="str_num">剩余:%1$d个</string>
    <string name="str_this_money">您共有%1$d金币</string>
    <string name="str_put_money">需消耗%1$d金币</string>
    <string name="str_not_money">您的金币不足</string>

    <string name="str_content">尊敬的用户\n您好!\n我们已经收到您的礼品兑换订单，我们的工作人员将在24小时之内寄出礼品，请您耐心等待，谢谢。\n

                                        最爱你的汤姆猫团队\n
                                        2017.6.8
    </string>
    <string name="str_time_get">立即兑换</string>
    <string name="str_save_get_address">添加收货地址</string>

    <string name="click_to_skip">点击跳过</string>

</resources>
