<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <RadioGroup
        android:id="@+id/radio_nav_group"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@mipmap/nav_background"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/selector_nav_home"
            android:gravity="center"
            android:text="@string/title_info"
            android:textColor="@drawable/selector_text" />

        <RadioButton
            android:id="@+id/rb_community"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/selector_nav_community"
            android:gravity="center"
            android:text="@string/title_community"
            android:textColor="@drawable/selector_text" />

        <RadioButton
            android:id="@+id/rb_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/selector_nav_start"
            android:gravity="center"
            android:text="@string/title_start"
            android:textColor="@drawable/selector_text" />
    </RadioGroup>

</merge>