<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFragmentBackground"
    android:orientation="vertical"
    tools:context=".ui.product.fragment.ProductFragment">

    <include layout="@layout/layout_toolbar_back" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_bottom_height"
        android:background="@mipmap/appbar_bottom_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/content_padding">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">

            <com.yuan7.tomcat.widget.banner.MZBannerView
                android:id="@+id/bv_product_pic"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                app:canLoop="true"
                app:indicatorAlign="center"
                app:indicatorPaddingLeft="10dp"
                app:open_mz_mode="false" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/tv_product_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_margin"
            android:text="精品汤姆猫毛绒玩具，纯棉产品无毒无害，宝宝的成长伴侣，速来抢购。"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/font_size_center" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_margin">

            <TextView
                android:id="@+id/tv_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/str_price"
                android:textColor="@color/fontColorRed"
                android:textSize="@dimen/font_size_big" />

            <TextView
                android:id="@+id/tv_product_yun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/str_put_address" />

        </FrameLayout>

        <ProgressBar
            android:id="@+id/pb_product_size"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginTop="@dimen/content_margin"
            android:progress="50"
            android:progressDrawable="@drawable/progressbar_horizontal_custom" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top">

            <TextView
                android:id="@+id/tv_product_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/str_count"
                android:textSize="@dimen/font_size_small_to" />

            <TextView
                android:id="@+id/tv_product_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/str_num"
                android:textSize="@dimen/font_size_small_to" />

        </FrameLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_get_product"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/content_margin"
        android:background="@drawable/shape_btn_yellow_bg"
        android:text="@string/str_time_get"
        android:textColor="@color/fontColorWhite" />

</LinearLayout>
