<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFragmentBackground"
    android:padding="@dimen/content_padding"
    tools:context="com.yuan7.tomcat.ui.menu.settings.app.AppSettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:layout_marginBottom="@dimen/margin_top"
            android:visibility="gone"
            app:cardCornerRadius="10dp">

            <FrameLayout
                android:id="@+id/fl_item_font"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:background="@drawable/ripple_app_settings_item"
                android:paddingLeft="@dimen/content_padding"
                android:paddingRight="@dimen/content_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:gravity="center"
                    android:text="@string/app_settings_font" />

                <TextView
                    android:id="@+id/tv_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:gravity="center"
                    android:text="大"
                    android:textColor="@color/colorPrimaryDark" />
            </FrameLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:layout_marginBottom="@dimen/margin_top"
            app:cardCornerRadius="10dp">

            <FrameLayout
                android:id="@+id/fl_item_push"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:background="@drawable/ripple_app_settings_item"
                android:paddingLeft="@dimen/content_padding"
                android:paddingRight="@dimen/content_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:gravity="center"
                    android:text="@string/app_settings_push" />

                <Switch
                    android:id="@+id/switch_push"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:clickable="false"
                    android:gravity="center" />

            </FrameLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:layout_marginBottom="@dimen/margin_top"
            app:cardCornerRadius="10dp">

            <FrameLayout
                android:id="@+id/fl_item_message"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:background="@drawable/ripple_app_settings_item"
                android:paddingLeft="@dimen/content_padding"
                android:paddingRight="@dimen/content_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:gravity="center"
                    android:text="@string/app_settings_message" />

                <Switch
                    android:id="@+id/switch_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:clickable="false"
                    android:gravity="center" />
            </FrameLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:layout_marginBottom="@dimen/margin_top"
            app:cardCornerRadius="10dp">

            <FrameLayout
                android:id="@+id/fl_item_wifi"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:background="@drawable/ripple_app_settings_item"
                android:paddingLeft="@dimen/content_padding"
                android:paddingRight="@dimen/content_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:gravity="center"
                    android:text="@string/app_settings_wifi" />

                <Switch
                    android:id="@+id/switch_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:clickable="false"
                    android:gravity="center" />
            </FrameLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:layout_marginBottom="@dimen/margin_top"
            app:cardCornerRadius="10dp">

            <FrameLayout
                android:id="@+id/fl_item_update"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:background="@drawable/ripple_app_settings_item"
                android:paddingLeft="@dimen/content_padding"
                android:paddingRight="@dimen/content_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:gravity="center"
                    android:text="@string/app_settings_update" />

            </FrameLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</FrameLayout>
